# crypto_transceiver

./: .gitignore  .gitmodules  CMakeLists.txt  S10pppoe_client  S10pppoe_server  S27configure  S28jackd_tx  S28log2speech_rx  S29configure  S29jackd_rx  S29log2speech_tx  S30jack_crypto_tx  S30transmit  S31jack_crypto_rx  S31receive  S32keypad_control  S32volume  S60keyfill_led  combo_update.sh  configure.sh  crypto.ini  crypto_cfg.c  crypto_cfg.h  crypto_common.c  crypto_common.h  crypto_log.c  crypto_log.h  crypto_rx.c  crypto_rx.ini  crypto_rx_common.cpp  crypto_rx_common.h  crypto_sample_rate.c  crypto_tx.c  crypto_tx.ini  crypto_tx_common.cpp  crypto_tx_common.h  debounce.h  iniget.c  initialize.sh  jack_common.cpp  (+28 more)
docs/: key_combo_fsm.dot
equalizers/: highpass_1_4000_gain_7.7.txt  sinc_400_lowpass_3000.txt  uv-82c.txt
help/: config.txt  freedv.txt  squelch.txt
